adding some extra mint

--- a/dist.ini
+++ b/dist.ini
@@ -4,9 +4,9 @@ license = Perl_5
 copyright_holder = Breno G. de Oliveira
 copyright_year   = 2011
 
-version = 0.001
-
 [@Git]
+
+[Git::NextVersion]
 
 [@Basic]
 
@@ -15,9 +15,14 @@ version = 0.001
 [PodWeaver]
 
 [NextRelease]
+format = %-9v %{yyyy-MM-dd}d
 
 [TestRelease]
 
+[CheckChangeLog]
+
 [ConfirmRelease]
+
+[GithubMeta]
 
 [UploadToCPAN]
