adding more mint

--- a/dist.ini
+++ b/dist.ini
@@ -5,10 +5,18 @@ copyright_holder = Breno G. de Oliveira
 copyright_year   = 2011
 
 [Git::NextVersion]
+[PkgVersion]
+[CompileTests]
+[HasVersionTests]
+[KwaliteeTests]
+[MinimumVersionTests]
+[PodCoverageTests]
+[PodSyntaxTests]
+[PortabilityTests]
+[AutoPrereqs]
+[ExtraTests]
 
 [@Basic]
-
-[AutoPrereqs]
 
 [PodWeaver]
 
