updated deprecated plugins

--- a/dist.ini
+++ b/dist.ini
@@ -6,10 +6,9 @@ copyright_year   = 2011
 
 [Git::NextVersion]
 [PkgVersion]
-[CompileTests]
+[Test::Compile]
 [HasVersionTests]
-[KwaliteeTests]
-[MinimumVersionTests]
+[Test::MinimumVersion]
 [PodCoverageTests]
 [PodSyntaxTests]
 [PortabilityTests]
