updating deprecated dzil stuff

--- a/dist.ini
+++ b/dist.ini
@@ -11,7 +11,7 @@ copyright_year   = 2011
 [Test::MinimumVersion]
 [PodCoverageTests]
 [PodSyntaxTests]
-[PortabilityTests]
+[Test::Portability]
 [AutoPrereqs]
 [ExtraTests]
 
