--- a/dist.ini
+++ b/dist.ini
@@ -6,16 +6,27 @@ copyright_year   = 2011
 
 [Git::NextVersion]
 [PkgVersion]
+
+; tests
 [Test::Compile]
 [HasVersionTests]
 [Test::MinimumVersion]
 [PodCoverageTests]
 [PodSyntaxTests]
 [Test::Portability]
-[AutoPrereqs]
 [ExtraTests]
+[AutoPrereqs]
 
-[@Basic]
+;[@Basic]
+[GatherDir]
+[PruneCruft]
+[ManifestSkip]
+[MetaYAML]
+[License]
+[Readme]
+
+[MakeMaker]
+[Manifest]
 
 [PodWeaver]
 
